Commit at 28-08-24 2:26 am

--- a/public/css/password.css
+++ b/public/css/password.css
@@ -29,7 +29,7 @@ input {
 /****************
       FORM
 *****************/
-.signup {
+.password {
   background-color:white;
   width: 100%;
   max-width: 500px;
@@ -62,7 +62,7 @@ h2 span {
 }
 
 /*  Field */
-.signup__field {
+.password__field {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -70,7 +70,7 @@ h2 span {
   margin-bottom: 50px;
 }
 
-.signup__field:before {
+.password__field:before {
   content: "";
   display: inline-block;
   position: absolute;
@@ -83,12 +83,12 @@ h2 span {
   transition: all 0.4s ease;
 }
 
-.signup__field:hover:before {
+.password__field:hover:before {
   width: 100%;
 }
 
 /*  Input */
-.signup__input {
+.password__input {
   width: 100%;
   height: 100%;
   font-size: 1.2rem;
@@ -97,7 +97,7 @@ h2 span {
 }
 
 /*  Label */
-.signup__label {
+.password__label {
   color: #bdbdbd;
   position: absolute;
   top: 50%;
@@ -107,8 +107,8 @@ h2 span {
   transition: all 0.3s ease;
 }
 
-.signup__input:focus + .signup__label,
-.signup__input:valid + .signup__label {
+.password__input:focus + .password__label,
+.password__input:valid + .password__label {
   top: 0;
   font-size: 1rem;
   background-color: white;
@@ -117,7 +117,7 @@ h2 span {
 /*  Button */
 button {
   display: inline-block;
-  padding: 12px 0;
+  padding: 1.375rem 2.25rem 1.375rem 2.25rem;
   background:var(--black-heading-text);
   border: 1px solid var(--black-heading-text);
   color: white;
@@ -135,69 +135,3 @@ button:hover {
   text-decoration: none;
 }
 
-
-
-
-.signup__button--google {
-  background-color: var(--google-red); /* Google Red */
-  color: white;
-  padding: 12px 0;
-  font-size: 1.2rem;
-  border-radius: 32px;
-  font-size: 1.2rem;
-  line-height: 0;
-  text-decoration: none;
-  transition: all 0.2s;
-  width: 100%;
-  margin-top: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-
-.signup__button--google:hover {
-  border: 1px solid var(--google-red);
-  background-color: transparent;
-  color: var(--google-red); /* needs to stay here because of the color property of a tag */
-  text-decoration: none;
-}
-
-
-.signup__button--apple {
-  background-color:  #000000; /* Google Red */
-  color: white;
-  padding: 12px 0;
-  font-size: 1.2rem;
-  border-radius: 32px;
-  font-size: 1.2rem;
-  line-height: 0;
-  text-decoration: none;
-  transition: all 0.2s;
-  width: 100%;
-  margin-top: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.signup__button--apple:hover {
-  border: 1px solid #000000;
-  background-color: transparent;
-  color: #000000; /* needs to stay here because of the color property of a tag */
-  text-decoration: none;
-}
-
-.signup__button--google i,
-.signup__button--apple i {
-  margin-right: 10px;
-}
-
-
-button i {
-  margin-right: 10px;
-}
-
-h1 i {
-  margin-right: 10px;
-}
