--- a/public/css/Color-palette.css
+++ b/public/css/Color-palette.css
@@ -1,30 +1,40 @@
-/* variables.css */
-
+/* Updated Color-palette.css */
+/*****************************************
+Colors:
+- Backgrounds - light gray #f1f9fc
+- Buttons, icons - purple #594cda
+- Buttons, icons - red #eb427e
+- Headings text - black #252c38
+- Body text - dark gray #6b747b
+******************************************/
 :root {
-    
-
     --primary-blue: #007aff;
     --white: #ffffff;
     --black: #000000;
-    
-    
-
     --medium-gray: #bdbdbd;
     --google-red: #db4437;
     --dark-google-red: #c33d2d;
-   
     --medium-dark-gray: #3f3f3f;
     --shadow-gray: #444444;
     --border-gray: #ccc;
-
-
-    /* General Theme color*/
     --light-gray: #f1f9fc;
     --purple: #594cda;
     --red: #eb427e;
     --black-heading-text: #252c38;
     --dark-gray-body-text: #6b747b;
-
     --header-gradient-background: linear-gradient(rgba(197, 234, 249, 1), rgba(255, 255, 255, 1));
-
+    --light-border: #e0e0e0;
+    --dark-border: #a1a1a1;
+    --background-color: #f8f9fa;
+    --light-background-color: #f1f3f4;
+    --button-border: #d0d5e2;
+    --link-hover: #ff6e84;
+    --label-gray: #7d838a;
+    --light-blue-gradient: #c5eaf9;
+    --pink-button: #eb427e;
+    --purple-button: #594cda;
+    --navbar-bg-color: #f1f9fc;
+    --footer-text-color: #6b747b;
+    --fa-icon-bg: #ffffff;
+    --fa-icon-color: #252c38;
 }
