--- a/public/css/sign.css
+++ b/public/css/sign.css
@@ -36,13 +36,11 @@
   margin-bottom: 0;
   text-align: left; /* Align text to the left */
   padding: 10px;
-  background-color: #f1f9fc;
-  border: 1px solid #f1f9fc;
+  background-color: var(--light-gray);
+  border: 1px solid var(--light-gray);
   border-radius: 15px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-
-
 
 * {
   margin: 0;
@@ -55,7 +53,6 @@ body {
   background-color: var(--light-gray);
   width: 100%;
   min-height: 100vh;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -71,14 +68,13 @@ input {
       FORM
 *****************/
 .signup {
-  background-color:white;
+  background-color: var(--white);
   width: 100%;
   max-width: 500px;
   padding: 50px 70px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-
   border-radius: 20px;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
     0 4px 6px -2px rgba(0, 0, 0, 0.05);
@@ -86,7 +82,7 @@ input {
 
 h1 {
   text-align: center;
-  color:  var(--black-heading-text);
+  color: var(--black-heading-text);
   margin-bottom: 20px;
   margin-left: 0;
   display: inline-block;
@@ -95,14 +91,13 @@ h2 {
   text-align: center;
   font-size: 1.2rem;
   font-weight: lighter;
-
   margin-bottom: 40px;
 }
 
 h2 span {
   text-decoration: underline;
   cursor: pointer;
-  color:  var(--dark-gray-body-text);
+  color: var(--dark-gray-body-text);
 }
 
 /*  Field */
@@ -113,8 +108,6 @@ h2 span {
   position: relative;
   margin-bottom: 50px;
 }
-
-
 
 .signup__field:before {
   content: "";
@@ -138,26 +131,26 @@ h2 span {
   width: 100%;
   height: 100%;
   font-size: 1.2rem;
-  padding: 10px 2px 0;
-  border-bottom: 2px solid #e0e0e0;
+  padding: 10px 50px 0 2px;
+  border-bottom: 2px solid var(--light-border);
 }
 
 /*  Label */
 .signup__label {
-  color: #bdbdbd;
+  color: var(--medium-gray);
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   left: 2px;
   font-size: 1.2rem;
   transition: all 0.3s ease;
+  pointer-events: none;
 }
 
-.signup__input:focus + .signup__label,
-.signup__input:valid + .signup__label {
+.move-up {
   top: 0;
   font-size: 1rem;
-  background-color: white;
+  background-color: var(--white);
 }
 
 .password-icon {
@@ -165,18 +158,45 @@ h2 span {
   right: 10px;
   top: 50%;
   transform: translateY(-50%);
-  display: none; /* Hidden by default */
+  display: block;
   font-size: 18px;
+  color: var(--medium-gray);
+  cursor: pointer;
+  z-index: 2;
+}
+
+.password-icons {
+  position: absolute;
+  right: 0px;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  gap: 8px; 
+}
+
+.password-icons .password-icon {
+  font-size: 18px;
+  color: var(--medium-gray);
+  cursor: pointer;
+  z-index: 2; 
+}
+
+#confirm-password-icon {
+  position: relative;
+  left: -40px; 
+  font-size: 18px;
+  color: var(--medium-gray);
+  cursor: pointer;
 }
 
 .password-strength-container {
-  display: none; /* Hidden by default */
+  display: none; 
   position: absolute;
   top: 50%;
   right: -320px; /* Position the container to the right of the input */
   width: 300px;
-  background-color: #f8f9fa;
-  border: 1px solid #dee2e6;
+  background-color: var(--background-color);
+  border: 1px solid var(--button-border);
   border-radius: 5px;
   padding: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -184,7 +204,6 @@ h2 span {
   z-index: 1000;
   transform: translateY(-50%);
 }
-
 
 .password-strength-container p {
   margin: 0 0 5px 0;
@@ -225,14 +244,13 @@ h2 span {
   margin-bottom: 20px; /* Ensure consistent spacing below the header */
 }
 
-
 /*  Button */
 button {
   display: inline-block;
   padding: 12px 0;
-  background:var(--black-heading-text);
+  background: var(--black-heading-text);
   border: 1px solid var(--black-heading-text);
-  color: white;
+  color: var(--white);
   border-radius: 32px;
   font-size: 1.2rem;
   line-height: 0;
@@ -247,12 +265,30 @@ button:hover {
   text-decoration: none;
 }
 
+.signup__checkbutton {
+  margin-top: -10px;
+  margin-bottom: 30px;
+  color: var(--black-heading-text);
+  font-size: 1rem;
+}
 
+.signup__checkbutton input[type="checkbox"] {
+  margin-right: 5px;
+  accent-color: var(--shadow-gray);
+}
 
+.signup__checkbutton a {
+  color: var(--primary-blue); /* Link color */
+  text-decoration: underline;
+}
+
+.signup__checkbutton a:hover {
+  color: var(--dark-google-red); /* Darker shade on hover */
+}
 
 .signup__button--google {
   background-color: var(--google-red); /* Google Red */
-  color: white;
+  color: var(--white);
   padding: 12px 0;
   font-size: 1.2rem;
   border-radius: 32px;
@@ -266,7 +302,6 @@ button:hover {
   justify-content: center;
 }
 
-
 .signup__button--google:hover {
   border: 1px solid var(--google-red);
   background-color: transparent;
@@ -275,10 +310,9 @@ button:hover {
   margin-top: 10px;
 }
 
-
 .signup__button--apple {
-  background-color:  #000000; /* Google Red */
-  color: white;
+  background-color: var(--black); /* Black */
+  color: var(--white);
   padding: 12px 0;
   font-size: 1.2rem;
   border-radius: 32px;
@@ -293,9 +327,9 @@ button:hover {
 }
 
 .signup__button--apple:hover {
-  border: 1px solid #000000;
+  border: 1px solid var(--black);
   background-color: transparent;
-  color: #000000; /* needs to stay here because of the color property of a tag */
+  color: var(--black); /* needs to stay here because of the color property of a tag */
   text-decoration: none;
   margin-top: 10px;
 }
@@ -305,7 +339,6 @@ button:hover {
   margin-right: 10px;
 }
 
-
 button i {
   margin-right: 10px;
 }
@@ -313,7 +346,6 @@ button i {
 h1 i {
   margin-right: 10px;
 }
-
 
 .forgot-password {
   text-align: right;
@@ -331,7 +363,6 @@ h1 i {
   text-decoration: underline;
 }
 
-
 /* Large tablets or small desktops */
 @media (max-width: 1200px) {
   .signup {
@@ -340,10 +371,6 @@ h1 i {
 
   h1 {
     font-size: 1.8rem;
-  }
-
-  button {
-    padding: 12px 20px;
   }
 }
 
@@ -359,10 +386,6 @@ h1 i {
 
   .signup__input {
     font-size: 1.1rem;
-  }
-
-  button {
-    padding: 10px 18px;
   }
 }
 
@@ -380,8 +403,20 @@ h1 i {
     font-size: 1rem;
   }
 
-  button {
-    padding: 8px 15px;
+  .password-strength-container {
+    display: none; 
+    position: absolute;
+    top: 50%;
+    right: -150px; /* Position the container to the right of the input */
+    width: 250px;
+    background-color: var(--background-color);
+    border: 1px solid var(--button-border);
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    font-size: 14px;
+    z-index: 1000;
+    transform: translateY(-50%);
   }
 }
 
@@ -399,7 +434,19 @@ h1 i {
     font-size: 0.9rem;
   }
 
-  button {
-    padding: 6px 12px;
+  .password-strength-container {
+    display: none; 
+    position: absolute;
+    top: 50%;
+    right: -20px; /* Position the container to the right of the input */
+    width: 250px;
+    background-color: var(--background-color);
+    border: 1px solid var(--button-border);
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    font-size: 14px;
+    z-index: 1000;
+    transform: translateY(-50%);
   }
 }
