--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -656,6 +656,7 @@ input[type="checkbox"] {
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
     text-align: center;
+
 }
 
 .features-layout {
@@ -1101,6 +1102,7 @@ a:hover.back-to-top {
         display: inline-block;
         width: 306px;
         vertical-align: top;
+        
     }
 
     .ex-cards-1 .card:nth-of-type(3n + 2) {
@@ -1161,3 +1163,10 @@ a:hover.back-to-top {
     /* end of extra pages */
 }
 /* end of min-width 1200px */
+
+#feature-sec .container {
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center;     /* Center vertically */
+    flex-wrap: wrap;         /* Ensure multiple cards wrap on smaller screens */
+}
