--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -863,6 +863,7 @@ input[type="checkbox"] {
 }
 
 .footer .fa-stack {
+    margin-top: 20px;
     width: 2em;
     margin-bottom: 1.25rem;
     margin-right: 0.375rem;
@@ -1166,7 +1167,46 @@ a:hover.back-to-top {
 
 #feature-sec .container {
     display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center;     /* Center vertically */
-    flex-wrap: wrap;         /* Ensure multiple cards wrap on smaller screens */
+    justify-content: center; 
+    align-items: center;     
+    flex-wrap: wrap;        
+}
+
+
+#ad-section {
+    padding: 2rem 0;
+    background-color: #f9fafb; 
+}
+
+.ad-item {
+    transition: transform 0.2s ease;
+}
+
+.ad-item:hover {
+    transform: translateY(-5px);
+}
+
+.ad-item img {
+    border-radius: 0.5rem;
+}
+
+#ad-section .ad-item img {
+    max-width: 100%; 
+    height: auto;    
+    display: block;
+    margin: 0 auto; 
+}
+
+
+#ad-section .ad-item {
+    max-width: 100%; /* Adjust based on image size */
+    margin: 0 auto;  /* Center the ad item on the page */
+    text-align: center;
+}
+
+#ad-section .ad-item img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto; /* Center the image within its container */
 }
